Added Privacy Policy link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
 <div class="bottom-line">
     <div class="wrap">
-        <div class="terms"><a href="/tos">Terms of Service</a> &amp; <a href="/aup">Acceptable Use Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://artsoflogic.com" target="_blank">Developed by ArtsOfLogic.com</a></div>
+        <div class="terms"><a href="/privacy">Privacy Policy</a>, <a href="/tos">Terms of Service</a> &amp; <a href="/aup">Acceptable Use Policy</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://artsoflogic.com" target="_blank">Developed by ArtsOfLogic.com</a></div>
         <div class="copyright">Copyright © 1999 - {{ site.time | date: '%Y' }} ARP Networks, Inc.</div>
     </div>
 </div>
