Fix for exterior fonts; added blog to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
                     <li><a href="http://support.arpnetworks.com">SUPPORT</a></li>
                     <li class=""><a href="/contact">CONTACT</a></li>
                     <li class=""><a href="/news">NEWS</a></li>
+                    <li class=""><a href="/blog">BLOG</a></li>
                 </ul>
             </div>
         </nav>
