--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -60,3 +60,7 @@ window.onload = function(){
 <img height="1" width="1" style="display:none;" alt="" src="//t.co/i/adsct?txn_id=nutfp&p_id=Twitter&tw_sale_amount=0&tw_order_quantity=0" />
 </noscript>
 <!-- End Twitter universal website tag code -->
+
+<!-- AddThis -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=garrydolley"></script>
+<!-- End AddThis -->
