Header consistent with new site changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,14 +23,12 @@
             <div class="menu-toggle"></div>
             <div class="menu">
                 <ul>
-                    <li class=""><a href="/">Home</a></li>
                     <li class=""><a href="/vps">VPS</a></li>
                     <li class=""><a href="/dedicated">DEDICATED</a></li>
-                    <li class=""><a href="/colocation">COLOCATION</a></li>
-                    <li class=""><a href="/bandwidth">TRANSIT</a></li>
+                    <li class=""><a href="/oncall">MANAGED</a></li>
                     <li><a href="http://support.arpnetworks.com/kb">FAQ</a></li>
                     <li><a href="http://support.arpnetworks.com">SUPPORT</a></li>
-                    <li class=""><a href="/contact">CONTACT</a></li>
+                    <li class=""><a class="typeform-share link" href="https://arpnetworks.typeform.com/to/lKn9aP" data-mode="drawer_right" style="" target="_blank">CONTACT</a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script></li>
                     <li class=""><a href="/news">NEWS</a></li>
                     <li class=""><a href="/blog">BLOG</a></li>
                 </ul>
